@@ -15,6 +15,8 @@ not yet  BJH  Release 10.62.00
               pamstereogram: fix bug: garbage in -verbose listing.  Broken
               since 10.61
 
+              MinGW build: various fixes.
+
 12.12.30 BJH  Release 10.61.00
 
               pgmhist: Add -machine option.
